# MathLib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/: CMakeLists.txt  MathLib.cppm
src/internal/: math_helpers.cppm
src/linear_algebra/: Factory.cppm  Matrix4.cppm  Vector2.cppm  Vector3.cppm  Vector4.cppm
src/trigonometry/: Angle.cppm
tests/: CMakeLists.txt  test_main.cpp
tests/linear_algebra/: Factory_tests.cpp  Matrix4_tests.cpp  Vector2_tests.cpp  Vector3_tests.cpp  Vector4_tests.cpp
tests/trigonometry/: Angle_tests.cpp
